ポストモデル

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,5 @@
 <% provide(:title, "About") %>
-<h1>Sample App</h1>
+<h1>操作画面投稿しますか？</h1>
 <p>
-  This is the home page for the
-  <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-  sample application.
+ 
 </p>
